Version 2022.10.7 (2022-10-8)
- Accept some existing prefix for sysvars and programs to avoid additional prefixing with Sv_ / P_
  - accepted sysvar prefixes: V_, Sv_
  - accepted program prefixes: P_, Prg_
- Read min/max temperature for climate devices

Version 2022.10.6 (2022-10-15)
- Replace data_* by HmDataOperationResult
- Use HmHvacMode HEAT instead of AUTO for simple thermostats
- Add HUMIDITY and ACTUAL_TEMPERATURE to heating groups

Version 2022.10.5 (2022-10-11)
- Set Hm Thermostat to manual mode before switching off

Version 2022.10.4 (2022-10-10)
- Allow entity creation for some internal paramters

Version 2022.10.3 (2022-10-10)
- Fix HM Blind/Cover custom entity types

Version 2022.10.2 (2022-10-08)
- Make connection checker more resilent:
 - Reduce connection checker interval to 15s
 - Connection is not connected, if three consecutive checks fail.

Version 2022.10.1 (2022-10-05)
- Ignore OPERATING_VOLTAGE for HmIP-PMFS
- Add ALPHA-IP-RBG

Version 2022.10.0 (2022-10-01)
- Rename hub event
- Remove "Servicemeldungen" from sysvars. It's alread included in the hub_entity (sensor.{instance_name})

Version 2022.9.1 (2022-09-20)
- Improve XmlServer shutdown
- Add name to threads and executors
- Improve ThreadPoolExecutor shutdown

Version 2022.9.0 (2022-09-02)
- Exclude value from event_data if None

Version 2022.8.15 (2022-08-27)
- Fix select entity detection

Version 2022.8.14 (2022-08-23)
- Exclude STRING sysvar from extended check

Version 2022.8.13 (2022-08-23)
- Allow three states for a forced availability of a device

Version 2022.8.12 (2022-08-23)
- Add device_type to device availability event
- Code deduplication and small fixes

Version 2022.8.11 (2022-08-18)
- Adjust logging (level and message)
- Delete sysvar if type changes

Version 2022.8.10 (2022-08-16)
- Improve readability of XmlRpc server
- Remove module data

Version 2022.8.9 (2022-08-16)
- Fix check if thread is started

Version 2022.8.8 (2022-08-16)